Bug 698266. Go back to using views when clearing mouse capture in views instead of trying to use frames. r=roc